# example_ros_pluginlib

./: README.md
example_manager/: CMakeLists.txt  nodelets.xml  package.xml
example_manager/config/: plugins.yaml
example_manager/include/example_manager/: common_handlers.h  plugin_interface.h
example_manager/launch/: example_manager.launch
example_manager/src/: example_manager.cpp
example_plugins/: CMakeLists.txt  package.xml  plugins.xml
example_plugins/config/: .default.yaml.swp  non_default.yaml
example_plugins/src/example_plugin/: example_plugin.cpp
